2006-07-11  Chong Yidong  <cyd@stupidchicken.com>

	* progmodes/ebrowse.el (ebrowse-display-member-buffer): Avoid
	using with-output-to-temp-buffer, which clobbers local vars.

2006-07-11  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/compile.el (compilation-error-regexp-alist-alist):
	Fix ambiguity introduced by last change.
	(compilation-find-file): Move save-excursion to where it may
	make sense.  Fix a left over `find-file'.

2006-07-11  Robert J. Chassell  <bob@rattlesnake.com>

	* textmodes/texinfmt.el:  (texinfo-format-separate-node):
	Insert a string before point, which fits documentation, not after.
	(texinfo-multitable-item): In a multitable row, insert any
	additional needed @tabs and spaces.

2006-07-11  Nick Roberts  <nickrob@snap.net.nz>

	* tumme.el (tumme-create-thumb)
	(tumme-thumbnail-display-external, tumme-display-image)
	(tumme-rotate-thumbnail, tumme-rotate-original)
	(tumme-set-exif-data, tumme-get-exif-data): Use call-process
	instead of shell-command.
	(tumme-create-thumbnail-buffer)
	(tumme-create-display-image-buffer, tumme-display-thumbs)
	(tumme-modify-mark-on-thumb-original-file, tumme-display-image)
	(tumme-get-exif-data): Use with-current-buffer.
	(tumme-display-properties-format)
	(tumme-dired-insert-marked-thumbs, tumme-rotate-original)
	(tumme-get-exif-file-name)
	(tumme-thumbnail-set-image-description, tumme-gallery-generate):
	Fit to 80 columns.

2006-07-11  Kim F. Storm  <storm@cua.dk>

	* subr.el (sit-for): Doc fix.  Specify normal arg list using fn-form.
	Remove special case for seconds < 0.  Use (redisplay t) instead.

2006-07-10  Chong Yidong  <cyd@stupidchicken.com>

	* progmodes/cc-awk.el (defconst): Use eval-and-compile to avoid
	compilation error.

	* subr.el (sit-for): New function.

	* play/hanoi.el (hanoi-sit-for): Check sit-for return value.

2006-07-10  Richard Stallman  <rms@gnu.org>

	* ldefs-boot.el (edebug): Update page.

2006-07-10  Kim F. Storm  <storm@cua.dk>
