@@ -1,5 +1,9 @@
 2006-07-11  Chong Yidong  <cyd@stupidchicken.com>
 
+	* vc.el (vc-exec-after): Don't delete process manually.
+	(vc-print-log): Run log-view-mode in process sentinel inside
+	inhibit-read-only.  Don't shrink window due to timing issues.
+
 	* progmodes/ebrowse.el (ebrowse-display-member-buffer): Avoid
 	using with-output-to-temp-buffer, which clobbers local vars.
 
